# TomTom

./: README.md
android-app/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android-app/app/: build.gradle  proguard-rules.pro
backend/: .editorconfig  .gitignore  CMakeLists.txt  README.md
backend/api-schema/request/: check_contract.fbs  edit_me.fbs  get_me.fbs  list_contracts.fbs  login.fbs  register.fbs  request_api.fbs  request_contract.fbs
backend/api-schema/response/: r_check_contract.fbs  r_edit_me.fbs  r_get_me.fbs  r_list_contracts.fbs  r_login.fbs  r_register.fbs  r_request_contract.fbs  response_api.fbs
backend/cert/: README.md  account.key  cert.der  key.der  key.pem  req.csr
backend/checker/: requirements.txt  svc2_dataset.txt  svc2_tomtom.py
backend/checker/svc2_flatbuffers/TomTomBackend/Request/: CheckContract.py  Message.py  MessageType.py  RequestContract.py
backend/checker/svc2_flatbuffers/TomTomBackend/Response/: CheckContract.py  EditMe.py  GetMe.py  ListContracts.py  Login.py  Message.py  MessageType.py  Register.py  RequestContract.py  Status.py  User.py
backend/docker/: Dockerfile_db  Dockerfile_tomtom  docker-compose.yml  supervisor.conf  tomtom_backend
backend/generate-flatbuff/: CheckContract.py  DB ORM.ipynb  EditMe.py  GenerateEditMeFlatbuff.ipynb  GenerateGetMeFlatbuff.ipynb  GenerateLoginFlatbuff.ipynb  GenerateRegisterFlatbuff.ipynb  GenerateRequestContractFlatbuff.ipynb  GetMe.py  ListContracts.py  Login.py  README.md  Register.py  RequestContract.py
backend/src/: cert.h  globals.h  main.c  main.h  processing.c  processing.h  utils.c  utils.h
backend/src/api/: check_contract.c  check_contract.h  edit_me.c  edit_me.h  get_me.c  get_me.h  list_contracts.c  list_contracts.h  login.c  login.h  register.c  register.h  request_contract.c  request_contract.h
(+51 files in other folders)
